--- a/stylesheets/animations.css
+++ b/stylesheets/animations.css
@@ -29,11 +29,14 @@
 }
 @keyframes sheepWalk-1 {
   0% {
+    opacity: 100%;
     background-position: 0 0;
     transform: translate(-60vw, 0);
   }
 
   100% {
+    opacity: 100%;
+
     background-position: 177.3vw 0;
     transform: translate(110vw, 0);
   }
@@ -153,13 +156,13 @@
     transform: translate(2.4vw, 1vw);
   }
   50% {
-    transform: translate(13vw, 24vw);
+    transform: translate(13vw, 22vw);
   }
   75% {
     transform: translate(24vw, 1vw);
   }
   90% {
-    transform: translate(34vw, 24vw);
+    transform: translate(34vw, 22vw);
   }
   100% {
     opacity: 100%;
